Fixing weird margins
Because I used a list for the landing page, there was some automatic CSS that was making the list of links to the other pages on the site off center, so I reworked it to not use any HTML listing and just did it with line breaks

--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,6 @@ ul#music-icons img {
     width: 20%;
 }
 
-.body-text {
-    margin: 8px;
-}
-
 .body-text a {
     color: inherit;
 }
